# continuoussets

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml  test-ci.yml
continuoussets/: __init__.py
continuoussets/convexsets/: convexset.py  interval.py  zonotope.py
continuoussets/utils/: comparison.py  exceptions.py
tests/: test_convexset.py  test_interval.py  test_utils.py  test_zonotope.py
